# PythonProject6

./: .coverage  .env_template  README.md  main.py  pyproject.toml  response.json
data/: trans_j.xls
src/: main.py  report_20250816_001020.txt  reports.py  response.json  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
user_settings/: .gitignore  README.md  pyproject.toml
